--- a/libreria/tests/test_proxxy.ipynb
+++ b/libreria/tests/test_proxxy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "f0065fab",
    "metadata": {},
    "outputs": [],
@@ -14,77 +14,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "f174458d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_endpoint = \"http://catedraupqqcsgmf.duyiogvhtufgdofthqzwyrfv.uk:11434/\""
+    "test_endpoint = \"\"\n",
+    "\n",
+    "api_key=\"\"\n",
+    "#api_key=\"\"\n",
+    "base_url=\"https://generativelanguage.googleapis.com/v1beta/openai/\"\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 38,
    "id": "ee546b50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(os.getenv(\"OPENROUTER_API_KEY\"))\n",
+    "#print(os.getenv(\"OPENROUTER_BASE_URL\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "0ef7201e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = openai.Client(\n",
+    "    api_key=api_key,\n",
+    "    base_url=base_url\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "73ee7273",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "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\n",
-      "https://openrouter.ai/api/v1\n"
+      "models/embedding-gecko-001\n",
+      "models/gemini-1.0-pro-vision-latest\n",
+      "models/gemini-pro-vision\n",
+      "models/gemini-1.5-pro-latest\n",
+      "models/gemini-1.5-pro-002\n",
+      "models/gemini-1.5-pro\n",
+      "models/gemini-1.5-flash-latest\n",
+      "models/gemini-1.5-flash\n",
+      "models/gemini-1.5-flash-002\n",
+      "models/gemini-1.5-flash-8b\n",
+      "models/gemini-1.5-flash-8b-001\n",
+      "models/gemini-1.5-flash-8b-latest\n",
+      "models/gemini-2.5-pro-exp-03-25\n",
+      "models/gemini-2.5-pro-preview-03-25\n",
+      "models/gemini-2.5-flash-preview-04-17\n",
+      "models/gemini-2.5-flash-preview-05-20\n",
+      "models/gemini-2.5-flash\n",
+      "models/gemini-2.5-flash-preview-04-17-thinking\n",
+      "models/gemini-2.5-flash-lite-preview-06-17\n",
+      "models/gemini-2.5-pro-preview-05-06\n",
+      "models/gemini-2.5-pro-preview-06-05\n",
+      "models/gemini-2.5-pro\n",
+      "models/gemini-2.0-flash-exp\n",
+      "models/gemini-2.0-flash\n",
+      "models/gemini-2.0-flash-001\n",
+      "models/gemini-2.0-flash-lite-001\n",
+      "models/gemini-2.0-flash-lite\n",
+      "models/gemini-2.0-flash-lite-preview-02-05\n",
+      "models/gemini-2.0-flash-lite-preview\n",
+      "models/gemini-2.0-pro-exp\n",
+      "models/gemini-2.0-pro-exp-02-05\n",
+      "models/gemini-exp-1206\n",
+      "models/gemini-2.0-flash-thinking-exp-01-21\n",
+      "models/gemini-2.0-flash-thinking-exp\n",
+      "models/gemini-2.0-flash-thinking-exp-1219\n",
+      "models/gemini-2.5-flash-preview-tts\n",
+      "models/gemini-2.5-pro-preview-tts\n",
+      "models/learnlm-2.0-flash-experimental\n",
+      "models/gemma-3-1b-it\n",
+      "models/gemma-3-4b-it\n",
+      "models/gemma-3-12b-it\n",
+      "models/gemma-3-27b-it\n",
+      "models/gemma-3n-e4b-it\n",
+      "models/embedding-001\n",
+      "models/text-embedding-004\n",
+      "models/gemini-embedding-exp-03-07\n",
+      "models/gemini-embedding-exp\n",
+      "models/aqa\n",
+      "models/imagen-3.0-generate-002\n",
+      "models/veo-2.0-generate-001\n",
+      "models/gemini-2.5-flash-preview-native-audio-dialog\n",
+      "models/gemini-2.5-flash-exp-native-audio-thinking-dialog\n",
+      "models/gemini-2.0-flash-live-001\n",
+      "models/gemini-live-2.5-flash-preview\n"
      ]
     }
    ],
    "source": [
-    "print(os.getenv(\"OPENROUTER_API_KEY\"))\n",
-    "print(os.getenv(\"OPENROUTER_BASE_URL\"))"
+    "models = c.models.list()\n",
+    "for m in models.data:\n",
+    "    print(m.id)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "0ef7201e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = openai.Client(\n",
-    "    api_key=\"-\",\n",
-    "    base_url=test_endpoint\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "73ee7273",
+   "execution_count": 41,
+   "id": "a4f06078",
    "metadata": {},
    "outputs": [
     {
-     "ename": "InternalServerError",
-     "evalue": "<html>\r\n<head><title>502 Bad Gateway</title></head>\r\n<body>\r\n<center><h1>502 Bad Gateway</h1></center>\r\n<hr><center>nginx/1.24.0 (Ubuntu)</center>\r\n</body>\r\n</html>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mInternalServerError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[16], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mmodels\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlist\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/home/shared/detector-informacion-falsa/.venv/lib/python3.12/site-packages/openai/resources/models.py:91\u001b[0m, in \u001b[0;36mModels.list\u001b[0;34m(self, extra_headers, extra_query, extra_body, timeout)\u001b[0m\n\u001b[1;32m     77\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mlist\u001b[39m(\n\u001b[1;32m     78\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m     79\u001b[0m     \u001b[38;5;241m*\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     85\u001b[0m     timeout: \u001b[38;5;28mfloat\u001b[39m \u001b[38;5;241m|\u001b[39m httpx\u001b[38;5;241m.\u001b[39mTimeout \u001b[38;5;241m|\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m \u001b[38;5;241m|\u001b[39m NotGiven \u001b[38;5;241m=\u001b[39m NOT_GIVEN,\n\u001b[1;32m     86\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m SyncPage[Model]:\n\u001b[1;32m     87\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[1;32m     88\u001b[0m \u001b[38;5;124;03m    Lists the currently available models, and provides basic information about each\u001b[39;00m\n\u001b[1;32m     89\u001b[0m \u001b[38;5;124;03m    one such as the owner and availability.\u001b[39;00m\n\u001b[1;32m     90\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[0;32m---> 91\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_get_api_list\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     92\u001b[0m \u001b[43m        \u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m/models\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m,\u001b[49m\n\u001b[1;32m     93\u001b[0m \u001b[43m        \u001b[49m\u001b[43mpage\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mSyncPage\u001b[49m\u001b[43m[\u001b[49m\u001b[43mModel\u001b[49m\u001b[43m]\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     94\u001b[0m \u001b[43m        \u001b[49m\u001b[43moptions\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mmake_request_options\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     95\u001b[0m \u001b[43m            \u001b[49m\u001b[43mextra_headers\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mextra_headers\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mextra_query\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mextra_query\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mextra_body\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mextra_body\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mtimeout\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mtimeout\u001b[49m\n\u001b[1;32m     96\u001b[0m \u001b[43m        \u001b[49m\u001b[43m)\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     97\u001b[0m \u001b[43m        \u001b[49m\u001b[43mmodel\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mModel\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     98\u001b[0m \u001b[43m    \u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/home/shared/detector-informacion-falsa/.venv/lib/python3.12/site-packages/openai/_base_client.py:1288\u001b[0m, in \u001b[0;36mSyncAPIClient.get_api_list\u001b[0;34m(self, path, model, page, body, options, method)\u001b[0m\n\u001b[1;32m   1277\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mget_api_list\u001b[39m(\n\u001b[1;32m   1278\u001b[0m     \u001b[38;5;28mself\u001b[39m,\n\u001b[1;32m   1279\u001b[0m     path: \u001b[38;5;28mstr\u001b[39m,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   1285\u001b[0m     method: \u001b[38;5;28mstr\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mget\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m   1286\u001b[0m ) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m SyncPageT:\n\u001b[1;32m   1287\u001b[0m     opts \u001b[38;5;241m=\u001b[39m FinalRequestOptions\u001b[38;5;241m.\u001b[39mconstruct(method\u001b[38;5;241m=\u001b[39mmethod, url\u001b[38;5;241m=\u001b[39mpath, json_data\u001b[38;5;241m=\u001b[39mbody, \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m*\u001b[39moptions)\n\u001b[0;32m-> 1288\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43m_request_api_list\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mpage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mopts\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/home/shared/detector-informacion-falsa/.venv/lib/python3.12/site-packages/openai/_base_client.py:1139\u001b[0m, in \u001b[0;36mSyncAPIClient._request_api_list\u001b[0;34m(self, model, page, options)\u001b[0m\n\u001b[1;32m   1135\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m resp\n\u001b[1;32m   1137\u001b[0m options\u001b[38;5;241m.\u001b[39mpost_parser \u001b[38;5;241m=\u001b[39m _parser\n\u001b[0;32m-> 1139\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mrequest\u001b[49m\u001b[43m(\u001b[49m\u001b[43mpage\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43moptions\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mstream\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n",
-      "File \u001b[0;32m/home/shared/detector-informacion-falsa/.venv/lib/python3.12/site-packages/openai/_base_client.py:1034\u001b[0m, in \u001b[0;36mSyncAPIClient.request\u001b[0;34m(self, cast_to, options, stream, stream_cls)\u001b[0m\n\u001b[1;32m   1031\u001b[0m             err\u001b[38;5;241m.\u001b[39mresponse\u001b[38;5;241m.\u001b[39mread()\n\u001b[1;32m   1033\u001b[0m         log\u001b[38;5;241m.\u001b[39mdebug(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mRe-raising status error\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m-> 1034\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_make_status_error_from_response(err\u001b[38;5;241m.\u001b[39mresponse) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[1;32m   1036\u001b[0m     \u001b[38;5;28;01mbreak\u001b[39;00m\n\u001b[1;32m   1038\u001b[0m \u001b[38;5;28;01massert\u001b[39;00m response \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcould not resolve response (should never happen)\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[0;31mInternalServerError\u001b[0m: <html>\r\n<head><title>502 Bad Gateway</title></head>\r\n<body>\r\n<center><h1>502 Bad Gateway</h1></center>\r\n<hr><center>nginx/1.24.0 (Ubuntu)</center>\r\n</body>\r\n</html>"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The capital of France is Paris.\n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "c.models.list()"
+    "resp = c.chat.completions.create(\n",
+    "    model=\"gemini-1.5-flash\",\n",
+    "    messages=[\n",
+    "        {\"role\": \"system\", \"content\": \"You are a helpful assistant.\"},\n",
+    "        {\"role\": \"user\", \"content\": \"What is the capital of France?\"},\n",
+    "    ],\n",
+    "    max_tokens=100,\n",
+    "    temperature=0.5,\n",
+    ")\n",
+    "print(resp.choices[0].message.content)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4f06078",
+   "id": "fb9acfc4",
    "metadata": {},
    "outputs": [],
    "source": []
